--- a/index.html
+++ b/index.html
@@ -1,31 +1,9 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>LinkBlox - </title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+---
+layout: default
+title: LinkBlox - Linking blocks of functionality
+---
+<div class="blurb">
+    <h1>LinkBlox</h1>
+	<p>Linking blocks of functionality <em>LinkBlox</em> <a href="/">Home</a></p>
+</div><!-- /.blurb -->
 
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/">About</a></li>
-        		<li><a href="https://www.linkedin.com/in/marksebald/">LinkedIn</a></li>
-        		<li><a href="http://www.marksense.net">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>LinkBlox</h1>
-				<p>Linking blocks of functionality <em>LinkBlox</em> <a href="/">Home</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:mdsebald@gmail.com">email</a></li>
-        		<li><a href="https://github.com/mdsebald">github.com/mdsebald</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
