--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: LinkBlox - Linking blocks of functionality
 ---
 <div class="blurb">
     <h1>LinkBlox</h1>
-	<p><em>Definately Under Construction!</em></p>
+	<p><em>Definitely Under Construction!</em></p>
 </div><!-- /.blurb -->
 
