--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: LinkBlox - Linking blocks of functionality
 ---
 <div class="blurb">
-    <h1>LinkBlox</h1>
+    <h1>LinkBlox - A block programming language</h1>
 	<p><em>Definitely Under Construction!</em></p>
 </div><!-- /.blurb -->
 
