--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@ layout: default
 title: LinkBlox - Linking blocks of functionality
 ---
 <div class="blurb">
-    <h1>LinkBlox - A block programming language</h1>
+    <h1>LinkBlox </h1>
+	<p></p>
+	<p>A block programming language</p>
+	<p></p>
 	<p><em>Definitely Under Construction!</em></p>
 </div><!-- /.blurb -->
 
