--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@ title: LinkBlox - Linking blocks of functionality
 <div class="blurb">
     <h1>LinkBlox </h1>
 	<p></p>
-	<p>A block programming language</p>
+	<p>A block programming language <a href="https://youtu.be/s4ppw2hgh34">Watch Demo</a></p>
 	<p></p>
 	<p><em>Definitely Under Construction!</em></p>
+	<p></p>
 </div><!-- /.blurb -->
 
