--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
----
-layout: default
-title: LinkBlox - Linking blocks of functionality
----
-<div class="blurb">
-    <h1>LinkBlox </h1>
-	<p></p>
-	<p>A block programming language <a href="https://youtu.be/s4ppw2hgh34">Watch Demo</a></p>
-	<p></p>
-	<p><em>Definitely Under Construction!</em></p>
-	<p></p>
-</div><!-- /.blurb -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> LinkBlox - Linking blocks of functionality</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  </head>
+  <body>
+    <div id="elm-app"></div>
+    <script src="elm.js"></script>
+    <script>
+      const elmDiv = document.querySelector('#elm-app');
+      if (elmDiv) {
+        var myApp = Elm.Main.embed(elmDiv);
+      }
+    </script>
+  </body>
+</html>
 
