--- a/BlockTypes.html
+++ b/BlockTypes.html
@@ -7,7 +7,7 @@
 				LinkBlox - Linking Blocks of Functionality
 			</h1>
 		</div><div class="w3-bar w3-black">
-			<a class="w3-bar-item w3-button" href="default.html">Home</a><a class="w3-bar-item w3-button" href="#">Doc</a><a class="w3-bar-item w3-button" href="BlockTypes.html">Block Types</a>
+			<a class="w3-bar-item w3-button" href="index.html">Home</a><a class="w3-bar-item w3-button" href="#">Doc</a><a class="w3-bar-item w3-button" href="BlockTypes.html">Block Types</a>
 		</div><table class="w3-table  w3-margin w3-table-all w3-hoverable">
 			<tr class="w3-blue">
 				<th>Type Name</th><th>Description</th>
