--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 				LinkBlox - Linking Blocks of Functionality
 			</h1>
 		</div><div class="w3-bar w3-black">
-			<a class="w3-bar-item w3-button" href="default.html">Home</a><a class="w3-bar-item w3-button" href="#">Doc</a><a class="w3-bar-item w3-button" href="BlockTypes.html">Block Types</a>
+			<a class="w3-bar-item w3-button" href="index.html">Home</a><a class="w3-bar-item w3-button" href="#">Doc</a><a class="w3-bar-item w3-button" href="BlockTypes.html">Block Types</a>
 		</div><div class="w3-card w3-margin">
 			<h3>
 				There's a Block for That...
