--- a/lblx_i2c_hd44780.html
+++ b/lblx_i2c_hd44780.html
@@ -7,7 +7,7 @@
 				LinkBlox - Linking Blocks of Functionality
 			</h1>
 		</div><div class="w3-bar w3-black">
-			<a class="w3-bar-item w3-button" href="default.html">Home</a><a class="w3-bar-item w3-button" href="#">Doc</a><a class="w3-bar-item w3-button" href="BlockTypes.html">Block Types</a>
+			<a class="w3-bar-item w3-button" href="index.html">Home</a><a class="w3-bar-item w3-button" href="#">Doc</a><a class="w3-bar-item w3-button" href="BlockTypes.html">Block Types</a>
 		</div><div class="w3-card w3-margin">
 			<p class="w3-blue w3-left-align">i2c_hd44780:  4 Row X 20 Col LCD display with I2C interface</p><style>
 				a:link {text-decoration: none;}
