--- a/lblx_mqtt_pub_sub.html
+++ b/lblx_mqtt_pub_sub.html
@@ -7,7 +7,7 @@
 				LinkBlox - Linking Blocks of Functionality
 			</h1>
 		</div><div class="w3-bar w3-black">
-			<a class="w3-bar-item w3-button" href="default.html">Home</a><a class="w3-bar-item w3-button" href="#">Doc</a><a class="w3-bar-item w3-button" href="BlockTypes.html">Block Types</a>
+			<a class="w3-bar-item w3-button" href="index.html">Home</a><a class="w3-bar-item w3-button" href="#">Doc</a><a class="w3-bar-item w3-button" href="BlockTypes.html">Block Types</a>
 		</div><div class="w3-card w3-margin">
 			<p class="w3-blue w3-left-align">mqtt_pub_sub:  Publish and Subscribe values to and from an MQTT Broker</p><style>
 				a:link {text-decoration: none;}
