--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 		</div><div class="w3-bar w3-black">
 			<a class="w3-bar-item w3-button" href="index.html">Home</a><a class="w3-bar-item w3-button" href="#">Doc</a><a class="w3-bar-item w3-button" href="BlockTypes.html">Block Types</a>
 		</div><div class="w3-card w3-margin">
-			<h3>
-				There's a Block for That...
-			</h3>
+			<h4>
+				Create custom embedded systems and IoT devices by creating blocks of functionality and linking them together
+			</h4>
+			<p>Under Construction...</p>
 		</div><div class="w3-bar w3-black w3-margin-bottom">
 			<a class="w3-bar-item w3-button" href="http://www.mdsebald.org">Blog</a><a class="w3-bar-item w3-button" href="mailto:mdsebald@gmail.com">Email</a><a class="w3-bar-item w3-button" href="https://github.com/mdsebald">GitHub</a><a class="w3-bar-item w3-button" href="https://www.linkedin.com/in/marksebald/">LinkedIn</a><a class="w3-bar-item w3-button" href="https://twitter.com/mdsebald">Twitter</a>
 		</div>
