--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 		<link rel="stylesheet" href="w3.css" />
 	</head><body>
 		<div class="header">
-			<h1>
+			<style>
+				a.NavbarLink:link {text-decoration: none; color: white }a.NavbarLink:visited {color: white;} a.Navbarlink:hover {color: dark-grey;} a.NavbarLink:active {color: white;} a.SourceCodeLink:link {text-decoration: none; color: #3c3c3c;} a.SourceCodeLink:visited {color: #3c3c3c;} a.SourceCodeLink:hover {color: blue;} a.SourceCodeLink:active {color: #3c3c3c;} 
+			</style><h1>
 				LinkBlox - Linking Blocks of Functionality
 			</h1>
-		</div><div class="w3-bar w3-black">
-			<a class="w3-bar-item w3-button" href="index.html">Home</a><a class="w3-bar-item w3-button" href="#">Doc</a><a class="w3-bar-item w3-button" href="BlockTypes.html">Block Types</a>
+		</div><div class="w3-bar w3-dark-grey">
+			<a class="w3-bar-item w3-button NavbarLink" href="index.html">Home</a><a class="w3-bar-item w3-button NavbarLink" href="#">Doc</a><a class="w3-bar-item w3-button NavbarLink" href="BlockTypes.html">Block Types</a>
 		</div><div class="w3-card w3-margin">
-			<h4>
+			<h3>
 				Create custom embedded systems and IoT devices by creating blocks of functionality and linking them together
-			</h4>
-			<p>Under Construction...</p>
-		</div><div class="w3-bar w3-black w3-margin-bottom">
-			<a class="w3-bar-item w3-button" href="http://www.mdsebald.org">Blog</a><a class="w3-bar-item w3-button" href="mailto:mdsebald@gmail.com">Email</a><a class="w3-bar-item w3-button" href="https://github.com/mdsebald">GitHub</a><a class="w3-bar-item w3-button" href="https://www.linkedin.com/in/marksebald/">LinkedIn</a><a class="w3-bar-item w3-button" href="https://twitter.com/mdsebald">Twitter</a>
+			</h3><p>Under construction...</p>
+		</div><div class="w3-bar w3-dark-grey w3-margin-bottom">
+			<a class="w3-bar-item w3-button NavbarLink" href="http://www.mdsebald.org">Blog</a><a class="w3-bar-item w3-button NavbarLink" href="mailto:mdsebald@gmail.com">Email</a><a class="w3-bar-item w3-button NavbarLink" href="https://github.com/mdsebald">GitHub</a><a class="w3-bar-item w3-button NavbarLink" href="https://www.linkedin.com/in/marksebald/">LinkedIn</a><a class="w3-bar-item w3-button NavbarLink" href="https://twitter.com/mdsebald">Twitter</a>
 		</div>
 	</body>
 </html>
