--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<h3>
 				Create custom embedded systems and IoT devices by creating blocks of functionality and linking them together
 			</h3><p>Under construction...</p>
-		</div><div class="w3-bar w3-dark-grey w3-margin-bottom">
+		</div><div class="w3-bar w3-dark-grey w3-margin-bottom w3-left-align">
 			<a class="w3-bar-item w3-button NavbarLink" href="http://www.mdsebald.org">Blog</a><a class="w3-bar-item w3-button NavbarLink" href="mailto:mdsebald@gmail.com">Email</a><a class="w3-bar-item w3-button NavbarLink" href="https://github.com/mdsebald">GitHub</a><a class="w3-bar-item w3-button NavbarLink" href="https://www.linkedin.com/in/marksebald/">LinkedIn</a><a class="w3-bar-item w3-button NavbarLink" href="https://twitter.com/mdsebald">Twitter</a><a class="w3-bar-item w3-right w3-small">&copy; Copyright 2018</a>
 		</div>
 	</body>
