Update, added block types

--- a/Resources.html
+++ b/Resources.html
@@ -12,8 +12,8 @@
 			<a class="w3-bar-item w3-button NavbarLink" href="index.html">Home</a><a class="w3-bar-item w3-button NavbarLink" href="BlockTypes.html">Block Types</a><a class="w3-bar-item w3-button NavbarLink" href="Resources.html">Resources</a>
 		</div><div class="w3-card w3-margin">
 			<h3>
-				Create custom embedded systems and IoT devices by creating blocks of functionality and linking them together
-			</h3><p>Under construction...</p>
+				Resources
+			</h3><p><a target="_blank" href="https://www.erlang.org/">Erlang</a><br /><a target="_blank" href="http://elixir-lang.org/">Elixir</a><br /><a target="_blank" href="http://nerves-project.org/">Nerves Project</a><br /><a target="_blank" href="https://elixir-lang.slack.com/messages/nerves">Nerves Slack Community</a></p>
 		</div><div class="w3-bar w3-dark-grey w3-margin-bottom w3-left-align">
 			<a class="w3-bar-item w3-button NavbarLink" target="_blank" href="http://www.mdsebald.org">Blog</a><a class="w3-bar-item w3-button NavbarLink" target="_blank" href="mailto:mdsebald@gmail.com">Email</a><a class="w3-bar-item w3-button NavbarLink" target="_blank" href="https://github.com/mdsebald">GitHub</a><a class="w3-bar-item w3-button NavbarLink" target="_blank" href="https://www.linkedin.com/in/marksebald/">LinkedIn</a><a class="w3-bar-item w3-button NavbarLink" target="_blank" href="https://twitter.com/mdsebald">Twitter</a><a class="w3-bar-item w3-right w3-small">&copy; Copyright 2018</a>
 		</div>
